--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   	<div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="" alt="First slide">
+      <img class="d-block w-100" src="landing_page.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="">
+      <img class="d-block w-100" src="landing_page.png">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="" alt="Third slide">
+      <img class="d-block w-100" src="landing_page.png" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
