--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-	
+ <div class="container marketing">
  <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
@@ -96,6 +96,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
+</div>
 
 
 
