--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   </div>
 </nav>
 
+ <hr class="featurette-divider">
 
-
-	<!-- carousel -->
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  	<div class="carousel-inner">
+    <!-- carousel -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="https://chenganma.github.io/landing_page.png" alt="First slide">
     </div>
@@ -97,8 +97,10 @@
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div><!-- /.row -->
 </div>
+	
+    <footer class="container"><p>&copy; Website Company 2018</p></footer>
 	
 	
 
