--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </a>
 </div>
 <div></div><div></div><div></div>
- <div class="container marketing">
+ <div class="container">
  <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
