--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   </div>
 </nav>
 
- <hr class="featurette-divider">
+ 
 
     <!-- carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="https://chenganma.github.io/landing_page.png" alt="First slide">
     </div>
@@ -74,8 +74,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<div></div><div></div><div></div>
- <div class="container">
+
+<hr class="featurette-divider">
+ <div class="container marketing">
  <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
